--- a/app/globals.css
+++ b/app/globals.css
@@ -140,3 +140,14 @@ li {
 .glow-effect img {
   animation: glowAnimation 2s infinite alternate;
 }
+
+.cm-editor.cm-focused {
+  outline: none !important;
+}
+
+.cm-editor {
+  padding: 0.5em;
+}
+.cm-editor .cm-scroller {
+  font-family: "Roboto Mono", monospace;
+}
